--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "auth",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://MightyMahesh222.github.io/My-Flipkart-Clone",
+  "homepage": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
